--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@google/genai": "^0.1.0",
+    "@google/generative-ai": "^0.3.0",
     "lucide-react": "^0.378.0",
     "recharts": "^2.12.7",
     "@supabase/supabase-js": "^2.43.4",
